# netgen

./: CMakeLists.txt
libsrc/occ/: CMakeLists.txt
ng/: CMakeLists.txt
nglib/: CMakeLists.txt
